--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -4,8 +4,9 @@ $md2: 991.98;
 .header {
 
     &__content {
-        max-width: 1044px;
+        max-width: 1052px;
         padding: 0px 6px;
+        margin: 0 auto;
     }
 }
 
@@ -48,9 +49,7 @@ $md2: 991.98;
     display: none;
     @media (max-width: $md3+px) {
         display: block;
-        position: absolute;
-        top: 18px;
-        right: 10px;
+        position: relative;
         width: 30px;
         height: 18px;
         cursor: pointer;
