--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -8,28 +8,51 @@ $md2: 991.98;
         padding: 0px 6px;
         margin: 0 auto;
     }
+    &__menu {
+        padding: 10px 0;
+        height: 82px;
+        align-items: center;
+        display: flex;
+        justify-content: flex-end;
+        @media (max-width: $md3+px) {
+            height: 50px;
+        }
+    }
 }
 
 .menu{
 
-    /*&__icon {
+    &__icon {
     }
 
     &__body {
-    }*/
+        @media (max-width: ($md3+px)) {
+            transform: translate(0px,-100%);
+            transition: transform 0.8s ease 0s;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            overflow: auto;
+            padding: 70px 10px 30px 10px;
+            background-color: rgba(255, 255, 255, 0.8);
+            &._active {
+                transform: translate(0px, 0%);
+            }
+        }
+    }
 
     &__list {
-        display: flex;
-        justify-content: flex-end;
-        height: 82px;
-        padding: 10px 0;
-        align-items: center;
         li { 
-            margin: 0px 0px 0px 33px;
-            list-style-type: none;
-            a {
-                text-decoration: none;
-            }
+            margin: 0px 0px 20px 0px;
+                &:last-child {
+                    margin: 0px 0px 0px 0px;
+                }
+        }
+        @media (min-width: $md3+px) {
+            display: flex;
+            li {margin: 0px 33px 0px 0px;}
         }
     }
 
@@ -42,6 +65,11 @@ $md2: 991.98;
             &:hover{
                 color: #ff6464;
             }
+        }
+        @media (max-width: $md3+px) {
+            font-size: 40px;
+            display: block;
+            text-align: center;
         }
     }
 }
@@ -63,11 +91,11 @@ $md2: 991.98;
             height: 2px;
             background-color: #000;
             &:first-child {
-                top: 0;
+                top: 0px;
             }
             &:last-child{
                 top: auto;
-                bottom: 0;
+                bottom: 0px;
             }
         }
         &._active {
