--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,7 +13,7 @@ $md2: 991.98;
 $md3: 767.98;
 $md4: 479.98;
 
-@import "null.css";
+@import "null.scss";
 body {
     color: #000;
     font-family: $font-family;
@@ -35,7 +35,7 @@ body {
 }
 
 ._container {
-    max-width: $maxWidthContainer + px;
+    max-width: $maxWidthContainer+px;
     margin: 0 auto;
     @media (max-width: $md1+px) {
         max-width: 750px;
