--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -1,4 +1,33 @@
 .title {
+    font-size: 44px;
+    font-weight: 700;
+    line-height: 60 / 44 * 100%;
+    @media (max-width: $md3+px) {
+        font-size: 32px;
+    }
 }
 .text {
+    font-size: 16px;
+    line-height: 23 / 16 * 100%;
+}
+
+.title-posts {
+    font-size: 22px;
+    margin: 0px 0px 20px 0px;
+    @media (max-width: $md3+px) {
+        text-align: center;
+        font-size: 18px;
+    }
+}
+
+._ibg {
+    position: relative;
+    img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        object-fit: cover;
+    }
 }
