--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -29,15 +29,15 @@
     -moz-osx-font-smoothing: grayscale;
   }
   
-  ._icon-icons8-facebook:before {
+  ._icon-facebook:before {
     content: "\e900";
   }
-  ._icon-icons8-instagram:before {
+  ._icon-instagram:before {
     content: "\e901";
   }
-  ._icon-icons8-twitter:before {
+  ._icon-twitter:before {
     content: "\e902";
   }
-  ._icon-icons8-youtube:before {
+  ._icon-youtube:before {
     content: "\e903";
   }
