--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -168,10 +168,23 @@
 
 .featured-works {
     padding: 30px 0px 80px 0px;
+    @media (max-width: $md3+px) {
+        padding: 30px 0px 30px 0px;
+    }
     &__container {
     }
 
     &__title {
+    }
+    &__items {
+        @media (max-width: $md3+px) {
+            display: flex;
+            overflow: auto;
+            .works__item {
+                flex: 0 0 90%;
+                margin: 0px 15px 0px 0px;
+            }
+        }
     }
 }
 
