--- a/src/scss/works.scss
+++ b/src/scss/works.scss
@@ -1,22 +1,36 @@
 .works {
 
     &__item {
-        display: flex;
-        align-items: flex-start;
         padding: 0px 0px 30px 0px;
         margin: 0px 0px 30px 0px;
         border-bottom: 1px solid #e0e0e0;
+        &:last-child {
+            margin-bottom: 0;
+        }
+        @media (min-width: $md3+px) {
+            display: flex;
+            align-items: flex-start;
+        }
+        
     }
 
     &__image {
         flex: 0 0 246px;
+        display: block;
         border-radius: 6px;
         min-height: 180px;
+        overflow: hidden;
+        @media (max-width: $md3+px) {
+            margin: 0px 0px 17px 0px;
+            padding: 0px 0px 60% 0px;
+        }
     }
 
     &__body {
         flex: 1 1 auto;
-        padding: 0px 0px 0px 18px;
+        @media (min-width: $md3+px) {
+            padding: 0px 0px 0px 18px;
+        }
     }
 
     &__title {
@@ -26,6 +40,9 @@
         font-weight: 700;
         line-height: 44 / 30 * 100%;
         margin: 0px 0px 15px 0px;
+        @media (max-width: $md3+px) {
+            font-size: 24px;
+        }
     }
 
     &__info {
