--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,9 +1,11 @@
 .footer {
-
+    text-align: center;
+    padding: 50px 0px;
     &__content {
     }
 
     &__social {
+        margin: 0px 0px 25px 0px;
     }
 
     &__copy {
