--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@ $md4: 479.98;
 @import "ui.scss";
 @import "home.scss";
 @import "works.scss";
+@import "footer.scss";
 $font-family: "Heebo";
 
 @import "null.scss";
@@ -55,6 +56,23 @@ body {
     flex: 1 1 auto;
     @media (max-width: $md3+px) {
         padding: 30px 0px 0px 0px;
+    }
+}
+
+.social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__item {
+        transition: color 0.3s ease 0s;
+        font-size: 30px;
+        color: inherit;
+        @media (min-width: $md2+px) {
+            &:hover {
+                color: #ff6464;
+            }
+        }
+        margin: 0 17px;
     }
 }
 
