--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@ $md4: 479.98;
 @import "home.scss";
 @import "works.scss";
 @import "footer.scss";
+@import "blog.scss";
 $font-family: "Heebo";
 
 @import "null.scss";
