--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,6 +1,9 @@
 .footer {
     text-align: center;
     padding: 50px 0px;
+    @media (max-width: $md3+px) {
+        padding: 30px 0px;
+    }
     &__content {
     }
 
